# AgenteIAporVoz

./: README.md  pyproject.toml
BOTs/: .gitignore  Dockerfile  agente_sql.py  docker-compose.yml  main.py  rag_loader.py  rag_query.py  requirements.txt  triage.py
BOTs/chroma-data/: chroma.sqlite3
Base_de_DATOS_POSTGRES/: README.md  docker-compose.yml
Investigaciones/: Documentacion.md  ~$Presentación Final.pptx
Notebooks de ayuda/: Pycamp-Agente con herramientas personalizadas.ipynb  Pycamp-Agente para Análisis automático SQL.ipynb  Pycamp-Agentes conversacionales con memoria.ipynb  Pycamp-Cargadores documentos.ipynb  Pycamp_Agente Chatbot con BD Vectorial interna y múltiples herramientas.ipynb  ejemplo_wiki_bd  ejemplosk_embedding_db
agenteiaporvoz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: audio_utils.py  main_window.py  record_thread.py  whisper_thread.py  whisper_utils.py
