[project]
name = "agenteiaporvoz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markupsafe==3.0.1",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "jinja2==3.1.4",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "pillow==11.0.0",
    "setuptools==70.2.0",
    "sympy==1.13.3",
    "torch==2.7.0+cu128",
    "torchaudio==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "typing-extensions==4.12.2",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "librosa>=0.11.0",
    "pyside6>=6.9.0",
]

[tool.uv]
index-strategy = 'unsafe-best-match'
find-links = ['https://download.pytorch.org/whl/torch_stable.html']
extra-index-url = [
    'https://download.pytorch.org/whl/cu128',
]
